Issue #47 Remove bitemporal flag
It is not used productively any more and makes subsequent changes more
difficult. Adapt server tests which still relied on it.